change bg color to black

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
       <h2>Services:</h2>
       <div class="flex-row">
         <div class="left-circle">
+          <div class="circle yellow xxxxs"></div>
+          <div class="circle yellow xxxs"></div>
+          <div class="circle yellow xxs"></div>
           <div class="circle yellow xs"></div>
           <div class="circle yellow s"></div>
           <div class="circle yellow m"></div>
@@ -158,6 +161,9 @@
           </div>
         </div>
         <div class="right-circle">
+          <div class="circle yellow xxxxs"></div>
+          <div class="circle yellow xxxs"></div>
+          <div class="circle yellow xxs"></div>
           <div class="circle yellow xs"></div>
           <div class="circle yellow s"></div>
           <div class="circle yellow m"></div>
@@ -180,7 +186,7 @@
             <p>
               <a
                 href="https://github.com/enospebrian1/Data-Cleaning/tree/main"
-                style="font-weight: bold; text-transform: none; color: black"
+                style="font-weight: bold; text-decoration: none; color: inherit"
                 >Data Cleaning</a
               >
             </p>
@@ -188,7 +194,7 @@
           </div>
           <div class="box">
             <img src="./Photos/altmap.PNG" alt="map" width="100px" />
-            <p style="font-weight: bold; text-transform: none; color: black">
+            <p style="font-weight: bold; text-decoration: none; color: inherit">
               Elang Projects
             </p>
             <p>Exploration projects with various assignments</p>
@@ -198,7 +204,9 @@
     </section>
     <footer>
       © 2023 -
-      <a href="https://enospebrian1.github.io/HTML-Try-Out/public/contact.html"
+      <a
+        href="https://enospebrian1.github.io/HTML-Try-Out/public/contact.html"
+        style="color: inherit; text-decoration: none"
         >Enos Pebrian</a
       >
     </footer>
