--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="flex-row">
       <div style="color: white">Enos Pebrian</div>
-      <div>
+      <div id="mid-nav">
         <a class="hyperlink-profile" href="#about-title">About</a>
         <a class="hyperlink-profile" href="#recent-projects">Work</a>
       </div>
