update avatar size
update avatar size

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           id="profilephoto"
           src="./Photos/AVATAR.jpg"
           alt="AVATAR"
-          width="400px"
+          width="100%"
         />
       </div>
     </section>
