--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <div class="container">
         <h2 id="about-title">About Me</h2>
         <p id="about-explanation">
-          As a web developer, I was once a geologist who possess sufficient
-          programming knowledge, made several short scripts to automate data
-          cleansing and processing using python. Currently, i am committed in
-          learning to be a fullstack web developer.
+          I was once a geologist who possess sufficient programming knowledge. I
+          made several short scripts to automate data cleansing and processing
+          using python. Currently, i am committed in learning to be a fullstack
+          web developer.
         </p>
         <div id="click-link">
           <a
@@ -125,7 +125,7 @@
         <div class="flex-row">
           <div class="box container">
             <img
-              src="https://cdn.rawgit.com/shannonmoeller/front-end-logo/master/exports/front-end-logo-bw-inverted.png"
+              src="./Photos/front-end-logo-bw-inverted.png"
               height="100px"
               alt="front-end-logo"
             />
