--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="flex-row">
       <div style="color: white">Enos Pebrian</div>
       <div id="mid-nav">
-        <a class="hyperlink-profile" href="#about-title">About</a>
+        <a class="hyperlink-profile" href="#value">About</a>
         <a class="hyperlink-profile" href="#recent-projects">Work</a>
       </div>
       <div>
