add id value to section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         />
       </div>
     </section>
-    <section class="value">
+    <section id="value">
       <div class="container">
         <h2 id="about-title">About Me</h2>
         <p id="about-explanation">
