--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
       </div>
     </nav>
-    <section class="profile">
+    <section class="profile" style="height: 100vh">
       <div class="about">
         <div>
           <h4>Hello! I'm Enos</h4>
@@ -44,7 +44,7 @@
         />
       </div>
     </section>
-    <section class="value" id="value">
+    <section class="value" id="value" style="height: 50vh">
       <div class="container">
         <h2 id="about-title">About Me</h2>
         <p id="about-explanation">
@@ -108,7 +108,7 @@
         </div>
       </div>
     </section>
-    <section class="services">
+    <section class="services" style="height: 50vh">
       <h2>Services:</h2>
       <div class="flex-row">
         <div class="left-circle">
@@ -130,7 +130,7 @@
               alt="front-end-logo"
             />
             Front-End
-            <p>Customize your apps with style as you please</p>
+            <p>Working knowledge using React.JS</p>
           </div>
           <div class="box container">
             <img
@@ -173,10 +173,38 @@
         </div>
       </div>
     </section>
-    <section id="recent-projects">
+    <section id="recent-projects" style="height: 100vh">
       <h2>Recent Projects</h2>
       <div class="container">
         <div class="flex-row">
+          <div class="box">
+            <img src="./Photos/todos.PNG" alt="todos page" height="100px" />
+            <p>
+              <a
+                href="https://todos-seven-kappa.vercel.app/"
+                style="font-weight: bold; text-decoration: none; color: inherit"
+                >To do App</a
+              >
+            </p>
+            <p>Basic - interactive todos app</p>
+          </div>
+          <div class="box">
+            <img
+              src="./Photos/event-ticket-management.PNG"
+              alt="event-ticket-management page"
+              height="100px"
+            />
+            <p>
+              <a
+                href="https://todos-seven-kappa.vercel.app/"
+                style="font-weight: bold; text-decoration: none; color: inherit"
+                >Event Ticket Management App</a
+              >
+            </p>
+            <p>
+              An app to discover events, advertise event, and reserve tickets
+            </p>
+          </div>
           <div class="box">
             <img
               src="./Photos/Codingan.PNG"
