--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <img src="./Photos/todos.PNG" alt="todos page" height="100px" />
             <p>
               <a
+                target="_blank"
                 href="https://todos-seven-kappa.vercel.app/"
                 style="font-weight: bold; text-decoration: none; color: inherit"
                 >To do App</a
@@ -196,7 +197,8 @@
             />
             <p>
               <a
-                href="https://todos-seven-kappa.vercel.app/"
+                target="_blank"
+                href="https://event-ticket-management.vercel.app/"
                 style="font-weight: bold; text-decoration: none; color: inherit"
                 >Event Ticket Management App</a
               >
@@ -213,6 +215,7 @@
             />
             <p>
               <a
+                target="_blank"
                 href="https://github.com/enospebrian1/Data-Cleaning/tree/main"
                 style="font-weight: bold; text-decoration: none; color: inherit"
                 >Data Cleaning</a
